--- a/debug-msg-variable.yml
+++ b/debug-msg-variable.yml
@@ -1,10 +1,10 @@
 ---
 - name: Deploying Apache and creating readme file along with enabling webservers
   become: yes
-  hosts: webservers
+  hosts: all
   vars:
     web_package: apache2
-    test_var1: just for testing
+      #test_var1: just for testing
     app_src_path: /home/ansible/Ansible/sample.html
     app_dest_path: /var/www/html/index.html
     src_url: https://s3.console.aws.amazon.com/s3/object/naresh-html-projects?region=ap-south-1&prefix=registrationpageofcustomer.html
