--- a/tomcat/tomcat.yml
+++ b/tomcat/tomcat.yml
@@ -52,3 +52,4 @@
         group: "{{ tomcat_group }}"
         owner: "{{ tomcat_group }}"
         state: directory
+      loop: "{{ tomcat_directories_for_group_permissions }}"
