--- a/tomcat/tomcat.yml
+++ b/tomcat/tomcat.yml
@@ -53,3 +53,36 @@
         owner: "{{ tomcat_group }}"
         state: directory
       loop: "{{ tomcat_directories_for_group_permissions }}"
+    - name: copy the tomcat service
+      template:
+        src: tomcat.service.j2
+        dest: "{{ tomcat_service_file }}"
+      notify:
+        - reload daemon
+    - name: enable and start tomcat service
+      service: 
+        name: tomcat.service
+        enabled: yes
+        state: started
+    - name: copy the tomcat users file
+      template:
+        src: tomcat-users.xml.j2
+        dest: "{{ tomcat_users_xml }}"
+      notify:
+        - restart tomcat
+    - name: copy the context file
+      copy:
+        src: context.xml
+        dest: "{{ tomcat_manager_context }}"
+      notify:
+        - restart tomcat
+  handlers:
+    - name: reload daemon
+      systemd:
+        name: tomcat.service
+        daemon_reload: yes
+        state: started
+    - name: restart tomcat
+      service: 
+        name: tomcat.service
+        state: restarted
